# Commuted

./: .env.example  .gitignore  1.1 AI Read Me.md  1.3 The World of Commuted.md  1.5 Timeline (Simplified).md  LICENSE  README.md  Story Brief Generator Evaluation.md  pyproject.toml  readme.md  requirements-dev.txt  sonar-project.properties  tox.ini
.github/: dependabot.yml
.obsidian/: app.json  appearance.json  command-palette.json  community-plugins.json  core-plugins.json  file-recovery.json  graph.json  hotkeys.json  page-preview.json  templates.json  types.json  workspace.json
1. Introduction/: 1.0 Introduction.md  1.2 Creator's Statement.md  1.4 On Real People.md  1.6 Chatkeeper key.md  1.7 Operational Dashboard.md  1.8 Obsidian data.md
10. Writing Guide/: 10.0 Writing Stylebook.md  10.1 Profanity.md  10.2 The War on Fade to Black.md  10.3 Show Me the Gum.md  10.4 Dates.md  10.5 Markdown Cheat Sheet.md  10.6 Glossary.md  10.7 How to Fuck.md
13. Tours/: 1992 The Gauntlet Tour.md  1993 The Work Release Tour.md  1995 The Blacklight Tour.md
14. Invented Concepts/: 14.1 Cincinnati Bass Concept.md  14.2 Sacred Realism.md  14.3 The Core Four.md
1990/: 1990 Let's Get Organized.md
1991/: 1991 Behind the Scenes.md  1991 Number 29 With a Bullet.md  1991 Original Opener.md  A Garage Story.md  Number 29 With a Bullet.md
1992/: 1992 En Passant, On Parole 1.md  1992 Gilley and the Argonauts.md  Argonaut Notes.md
1993/: 1993 By the Dawn's Early Flight.md  1993 Gilley and the Argonauts.md  1993 Iberian Oranges.md  1993 The Predators Charm.md
1994/: 1994 Caught in the Act.md  1994 The Honeymoon Pt I.md  1994 The Honeymoon Pt II.md  1994 The Pickle Jar Incident.md
1995/: 1995 People Magazine About That Album Art.md  1995 Sarah's Internal Memo to the Band.md  Untitled.md
1997/: 1997 A French Woman.md
1998/: 1998 Guessing song release date for A Charcoal Sketch.md  1998 Kendall's First Essay.md  1998 Matt Pinfield Reviews Leave My Key and Go.md  The København Baptism Notes.md  new 1.txt
2. Themes/: 2.0 Themes.md  2.1 A Band A Region A Sentence.md  2.2 Commuted.md
2000/: 2000 Érōs.md  (+1 more)
(+651 files in other folders)
