[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commuted"
version = "0.1.0"
description = "Commuted story brief generator"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
story-brief = "tools.generate_story_brief:main"

[tool.setuptools.packages.find]
include = ["tools*", "data*"]

[tool.setuptools.package-data]
"data.story_brief" = ["*.json"]
