[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commuted"
version = "0.1.0"
description = "Commuted story brief generator"
license = { text = "MIT" }
readme = "readme.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.11.0"]

[project.scripts]
story-brief = "tools.generate_story_brief:main"

[tool.setuptools.packages.find]
include = ["tools*", "data*"]

[tool.setuptools.package-data]
"data.story_brief" = ["*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
